--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,24 @@
 <div class="container">
+    <div>
+        <img src="assets\Opt.png" alt="My Image" class="image">
+      </div>
 
     <h3 class="d-flex justify-content-center">Employee Database Management Portal</h3>
 
     <nav class="navbar navbar-expand-sm bg-light navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item">
+                <button routerLink="home"
+                class="m-1 btn btn-light btn-outline-primary" Button>HOME</button>
+
+     
+            <li class="nav-item">
                 <button routerLink="department"
                 class="m-1 btn btn-outline-primary" Button>Departments</button>
             </li>
 
             <li class="nav-item">
-                <button routerLink="department"
+                <button routerLink="employee"
                 class="m-1 btn btn-outline-primary" Button>Employees</button>
             </li>
         </ul>
