--- a/src/app/department/add-edit-dept/add-edit-dept.component.html
+++ b/src/app/department/add-edit-dept/add-edit-dept.component.html
@@ -1,9 +1,10 @@
-<!-- <p>add-edit-dept works!</p> -->
+
+
 <div class="form-group row">
 
     <label class="col-sm-2 col-form-label">DepartmentName</label>
     <div class="col-sm-10">
-        <input type="text" class="form-control" [(ngModel)]="DepartmentName"
+        <input type="text"  id="departmentName" formControllName="departmentName"  class="form-control" [(ngModel)]="DepartmentName"
         placeholder="Enter Department Name">
     </div>
 </div>
