--- a/src/app/employee/add-edit-emp/add-edit-emp.component.html
+++ b/src/app/employee/add-edit-emp/add-edit-emp.component.html
@@ -1,1 +1,126 @@
-<p>add-edit-emp works!</p>
+<div class="d-flex flex-row bd-highlight mb-2">
+    <div class="form-group row" style="width: 60%;">
+
+        <label class="col-sm-2 col-form-label">EmployeeId</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="EmployeeId"
+                placeholder="Enter Employee Id" pattern="[0-9]{1,3}" required>
+        </div>
+
+       <!-- <label class="col-sm-2 col-form-label">EmployeeName</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="EmployeeName" placeholder="Enter EmployeeName"
+                pattern="[a-zA-Z]{1,45}" required>
+        </div> -->
+
+        <label class="col-sm-2 col-form-label">FirstName</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="FirstName" placeholder="Enter First Name"
+                pattern="[a-zA-Z]{1,45}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">LastName</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="LastName" placeholder="Enter Last Name"
+                pattern="[a-zA-Z]{1,45}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">Designation</label>
+
+        <div class="col-sm-10">
+        
+            <select [(ngModel)]="Designation" class="form-control">
+           
+                <option *ngFor="let deptName of AllDepartments" [value]="deptName.Designation">
+                    {{ deptName.Designation }}
+                </option>
+            </select>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">DateofJoining</label>
+        <div class="col-sm-10">
+            <input type="date" class="form-control" [(ngModel)]="DateOfJoining" placeholder="Enter Date of Joining"
+                required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">ReportingManagerEmployeeId</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="ReportingManagerEmployeeId"
+                placeholder="Enter Manager Id" pattern="[0-9]{1,3}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">Sex</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="Sex" placeholder="Enter Gender"
+                pattern="[a-zA-Z]{1,10}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">EmployeeAddress</label>
+        <div class="col-sm-10">
+            <textarea class="form-control" [(ngModel)]="EmployeeAddress" placeholder="Enter Address"
+                pattern="[a-zA-Z]{1,150}" required></textarea>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">State</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="State" placeholder="Enter State"
+                pattern="[a-zA-Z]{1,50}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">Country</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="Country" placeholder="Enter Country"
+                pattern="[a-zA-Z]{1,45}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">Pincode</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="Pincode" placeholder="Enter Pincode" pattern="[0-9]{5}"
+                required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">DepartmentId</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="DepartmentId" placeholder="Enter Department ID"
+                pattern="[0-9]{1,7}" required>
+        </div>
+
+        <br>
+
+        <label class="col-sm-2 col-form-label">IsActive</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" [(ngModel)]="IsActive" placeholder="Enter 1 for Active, 0 for Inactive"
+                pattern="[0-1]{1}" required>
+        </div>
+
+        <br>
+    </div>
+</div>
+
+<button (click)="addEmployee()" *ngIf="emp.EmployeeId==0" class="btn btn-primary">
+    Add
+</button>
+
+<button (click)="updateEmployee()" *ngIf="emp.EmployeeId!=0" class="btn btn-primary">
+    Update
+</button>
