--- a/src/app/department/add-edit-dept/add-edit-dept.component.html
+++ b/src/app/department/add-edit-dept/add-edit-dept.component.html
@@ -1,8 +1,8 @@
 
-
+<!-- 
 <div class="form-group row">
 
-    <label class="col-sm-2 col-form-label">DepartmentName</label>
+    <label class="col-sm-2 col-form-label">DepartmentName*</label>
     <div class="col-sm-10">
         <input type="text"  id="departmentName" formControllName="departmentName"  class="form-control" [(ngModel)]="DepartmentName"
         placeholder="Enter Department Name">
@@ -15,4 +15,29 @@
 
 <button (click)="updateDepartment()" *ngIf="dept.DepartmentId!=0" class="btn btn-primary">
     Update
-</button>
+</button> -->
+
+<div class="form-group row">
+    <label class="col-sm-4 col-form-label">DepartmentName*</label>
+    <div class="col-sm-8">
+      <input type="text" id="departmentName" [formControl]="departmentName" class="form-control" [(ngModel)]="DepartmentName"
+      placeholder="Enter Department Name">
+      <div *ngIf="departmentName.invalid && (departmentName.dirty || departmentName.touched)">
+        <div *ngIf="departmentName.errors?.['required']" class="error-message">Department Name is required.</div>
+        <div *ngIf="departmentName.errors?.['pattern']" class="error-message">
+          Department Name should only contain alphabets (no special characters, spaces, or numbers).
+        </div>
+        
+
+      </div>
+    </div>
+  </div>
+  
+  <button (click)="addDepartment()" *ngIf="dept.DepartmentId == 0" class="btn btn-primary">
+    Add
+  </button>
+  
+  <button (click)="updateDepartment()" *ngIf="dept.DepartmentId != 0" class="btn btn-primary">
+    Update
+  </button>
+  
