--- a/src/app/department/add-edit-dept/add-edit-dept.component.html
+++ b/src/app/department/add-edit-dept/add-edit-dept.component.html
@@ -1,21 +1,4 @@
 
-<!-- 
-<div class="form-group row">
-
-    <label class="col-sm-2 col-form-label">DepartmentName*</label>
-    <div class="col-sm-10">
-        <input type="text"  id="departmentName" formControllName="departmentName"  class="form-control" [(ngModel)]="DepartmentName"
-        placeholder="Enter Department Name">
-    </div>
-</div>
-
-<button (click)="addDepartment()" *ngIf="dept.DepartmentId==0" class="btn btn-primary">
-    Add
-</button>
-
-<button (click)="updateDepartment()" *ngIf="dept.DepartmentId!=0" class="btn btn-primary">
-    Update
-</button> -->
 
 <div class="form-group row">
     <label class="col-sm-4 col-form-label">DepartmentName*</label>
@@ -26,16 +9,20 @@
         <div *ngIf="departmentName.errors?.['required']" class="error-message">Department Name is required.</div>
         <div *ngIf="departmentName.errors?.['pattern']" class="error-message">
           Department Name should only contain alphabets (no special characters, spaces, or numbers).
+      
+        <div *ngIf="departmentName.errors?.['required']" class="error-message">Department Name Should be Unique
+        </div>
         </div>
         
-
-      </div>
+        </div>
     </div>
   </div>
   
   <button (click)="addDepartment()" *ngIf="dept.DepartmentId == 0" class="btn btn-primary">
     Add
   </button>
+
+  
   
   <button (click)="updateDepartment()" *ngIf="dept.DepartmentId != 0" class="btn btn-primary">
     Update
