--- a/src/app/department/show-dept/show-dept.component.html
+++ b/src/app/department/show-dept/show-dept.component.html
@@ -1,4 +1,4 @@
-<!-- Button trigger modal -->
+
 <button type="button" class="btn btn-primary float-right m-2" 
         data-bs-toggle="modal" data-bs-target="#exampleModal"
         (click)="addClick()"
@@ -6,7 +6,7 @@
   Add Department
 </button>
 
-  <!-- Modal -->
+
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
       <div class="modal-content">
@@ -20,7 +20,6 @@
         <div class="modal-body">
            <app-add-edit-dept [dept]="dept" *ngIf="ActivateAddEditDeptComp">
            </app-add-edit-dept> 
-           <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
         </div>
       </div>
     </div>
@@ -36,7 +35,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let dataItem of AllDepartments">
+        <tr *ngFor="let dataItem of AllDepartments | paginate: { itemsPerPage: itemsPerPage, currentPage: p }">
             <td>{{dataItem.DepartmentId}}</td>
             <td>{{dataItem.DepartmentName}}</td>
        
@@ -64,3 +63,12 @@
       </tr>
     </tbody>
 </table>
+
+<div class="container">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5">
+    <!-- Your grid items here -->
+  </div>
+  <div class="mt-8 py-5 pagination-container">
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
+</div>
